--- a/render.yaml
+++ b/render.yaml
@@ -2,6 +2,6 @@ services:
   - type: web
     name: ventas-backend
     env: python
-    buildCommand: pip install -r ventas-backend/requirements.txt
-    startCommand: uvicorn ventas-backend.main:app --host=0.0.0.0 --port=10000
-    rootDir: ventas-backend
+    buildCommand: "pip install -r requirements.txt"
+    startCommand: "uvicorn main:app --host=0.0.0.0 --port=10000"
+    plan: free
